--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">2026 马年新春祝福</title>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <style>
         /* --- 页面基础设置与图片背景 --- */
         body {
@@ -11,11 +12,11 @@
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: flex-end;
+            align-items: flex-end; 
             height: 100vh;
             background-image: url('bg.jpg');
             background-size: cover;
-            background-position: center top;
+            background-position: center top; 
             background-repeat: no-repeat;
             background-attachment: fixed;
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -31,7 +32,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 60vh;
+            height: 60vh; 
             padding-bottom: 90px;
             z-index: 10;
         }
@@ -60,14 +61,14 @@
             transition: all 0.2s ease;
         }
 
-            .btn:hover {
-                transform: translateY(-3px) scale(1.05);
-                box-shadow: 0 8px 25px rgba(255, 215, 0, 0.9);
-            }
+        .btn:hover {
+            transform: translateY(-3px) scale(1.05);
+            box-shadow: 0 8px 25px rgba(255, 215, 0, 0.9);
+        }
 
-            .btn:active {
-                transform: translateY(1px) scale(0.98);
-            }
+        .btn:active {
+            transform: translateY(1px) scale(0.98);
+        }
 
         /* --- 滚动与卡片 --- */
         .messages-wrapper {
@@ -79,16 +80,13 @@
             flex-direction: column;
             align-items: center;
             padding-bottom: 20px;
-            scrollbar-width: none;
+            scrollbar-width: none; 
             -ms-overflow-style: none;
         }
-
-            .messages-wrapper::-webkit-scrollbar {
-                display: none;
-            }
+        .messages-wrapper::-webkit-scrollbar { display: none; }
 
         .msg-card {
-            background: rgba(80, 0, 0, 0.65);
+            background: rgba(80, 0, 0, 0.65); 
             border: 1px solid rgba(255, 215, 0, 0.5);
             color: #fff;
             font-size: 1.15rem;
@@ -101,7 +99,7 @@
             text-shadow: 0 1px 2px rgba(0,0,0,0.8);
             opacity: 0;
             transform: translateY(40px) scale(0.8);
-            animation: popUp 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+            animation: popUp 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards; 
             backdrop-filter: blur(6px);
             -webkit-backdrop-filter: blur(6px);
         }
@@ -141,10 +139,10 @@
             padding-left: 5px;
         }
 
-            .share-input::placeholder {
-                color: #ffd700;
-                opacity: 0.7;
-            }
+        .share-input::placeholder {
+            color: #ffd700;
+            opacity: 0.7;
+        }
 
         .share-btn {
             background: linear-gradient(to bottom, #ffd700, #ffcc00);
@@ -159,61 +157,27 @@
             font-size: 0.95rem;
         }
 
-            .share-btn:hover {
-                transform: scale(1.05);
-                filter: brightness(1.1);
-            }
+        .share-btn:hover {
+            transform: scale(1.05);
+            filter: brightness(1.1);
+        }
 
         /* 动画定义 */
         @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-30px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            from { opacity: 0; transform: translateY(-30px); }
+            to { opacity: 1; transform: translateY(0); }
         }
-
         @keyframes popUp {
-            to {
-                opacity: 1;
-                transform: translateY(0) scale(1);
-            }
+            to { opacity: 1; transform: translateY(0) scale(1); }
         }
 
         @media (max-width: 600px) {
-            h1 {
-                font-size: 2.2rem;
-            }
-
-            .main-container {
-                height: 65vh;
-                padding-bottom: 80px;
-            }
-
-            .msg-card {
-                font-size: 1.05rem;
-                width: 90%;
-                padding: 12px 18px;
-            }
-
-            .share-box {
-                bottom: 15px;
-                padding: 6px 12px;
-            }
-
-            .share-input {
-                width: 110px;
-                font-size: 0.95rem;
-            }
-
-            .share-btn {
-                padding: 6px 12px;
-                font-size: 0.85rem;
-            }
+            h1 { font-size: 2.2rem; }
+            .main-container { height: 65vh; padding-bottom: 80px; }
+            .msg-card { font-size: 1.05rem; width: 90%; padding: 12px 18px;}
+            .share-box { bottom: 15px; padding: 6px 12px;}
+            .share-input { width: 110px; font-size: 0.95rem; }
+            .share-btn { padding: 6px 12px; font-size: 0.85rem; }
         }
     </style>
 </head>
@@ -237,7 +201,6 @@
         document.getElementById('page-title').textContent = `祝 ${targetName} 2026 马年新春快乐`;
         document.getElementById('main-title').innerHTML = `祝 <span class="highlight-name">${targetName}</span> 新春祈福`;
 
-        // 全新扩充的、涵盖生活各方面的 18 条多维度祝福语库
         const messages = [
             `🐴 祝 ${targetName} 2026 马到成功，无论做什么都一马当先！`,
             `💰 愿 ${targetName} 财运亨通，马上有钱，基金股票一路长虹！`,
@@ -258,27 +221,41 @@
             `🎠 祝 ${targetName} 无论长多大，都能保留内心的童真，笑口常开！`,
             `🎯 愿 ${targetName} 定下的 Flag 全都实现，执行力拉满，一气呵成！`
         ];
-
+        
         let currentIndex = 0;
 
-        // 引入简单的洗牌算法，打乱祝福语顺序，让每个人点开看到的第一个祝福都不同
         function shuffleArray(array) {
             for (let i = array.length - 1; i > 0; i--) {
                 const j = Math.floor(Math.random() * (i + 1));
                 [array[i], array[j]] = [array[j], array[i]];
             }
         }
-        // 页面加载时打乱一次
         shuffleArray(messages);
 
+        // 预加载提示音效
+        const popSound = new Audio('https://www.soundjay.com/buttons/sounds/button-09.mp3');
+
         function addMessage() {
+            // 播放音效
+            popSound.currentTime = 0;
+            popSound.play().catch(err => console.log("浏览器限制了自动播放", err));
+
+            // 触发红金专属撒花特效
+            confetti({
+                particleCount: 120,      
+                spread: 80,              
+                origin: { y: 0.7 },      
+                colors: ['#ffd700', '#ff0000', '#ffcc00', '#ffffff'], 
+                zIndex: 100              
+            });
+
+            // 生成卡片
             const wrapper = document.getElementById('messages-wrapper');
             const newCard = document.createElement('div');
             newCard.className = 'msg-card';
             newCard.innerHTML = messages[currentIndex];
             currentIndex = (currentIndex + 1) % messages.length;
-
-            // 如果一轮抽完了，再重新洗牌，保持新鲜感
+            
             if (currentIndex === 0) {
                 shuffleArray(messages);
             }
