--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">2026 马年新春祝福</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvas-confetti/1.6.0/confetti.browser.min.js"></script>
+  <script src="https://cdn.staticfile.net/canvas-confetti/1.6.0/confetti.browser.min.js"></script>
     <style>
         /* --- 页面基础设置与图片背景 --- */
         body {
@@ -300,3 +300,4 @@
 
 </body>
 </html>
+
