--- a/index.html
+++ b/index.html
@@ -37,14 +37,25 @@
             z-index: 10;
         }
 
+        /* 标题样式：控制整体字体 */
         h1 {
             font-size: 2.8rem;
             margin-bottom: 20px;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.8), 0 0 15px rgba(255, 215, 0, 0.8);
+            /* 强化阴影，确保在砖墙背景上文字醒目 */
+            text-shadow: 0 2px 8px rgba(0,0,0,0.9), 0 0 20px rgba(255, 215, 0, 0.6);
             animation: fadeInDown 1s ease-out;
             padding: 0 15px;
             font-weight: 800;
             letter-spacing: 2px;
+            line-height: 1.3;
+        }
+
+        /* 名字样式：现在与标题完全一致 */
+        .highlight-name {
+            font-weight: inherit;
+            font-size: inherit;
+            color: inherit;
+            text-decoration: none;
         }
 
         /* --- 交互按钮 --- */
@@ -105,15 +116,6 @@
             -webkit-backdrop-filter: blur(6px);
         }
 
-        .highlight-name {
-            color: #ffd700;
-            font-weight: 900;
-            font-size: 1.3rem;
-            text-decoration: underline;
-            text-underline-offset: 4px;
-            text-decoration-color: rgba(255, 215, 0, 0.6);
-        }
-
         /* --- 底部工具栏 --- */
         .share-box {
             position: fixed;
@@ -138,6 +140,11 @@
             width: 120px;
             font-size: 1rem;
             padding-left: 5px;
+        }
+
+        .share-input::placeholder {
+            color: #ffd700;
+            opacity: 0.7;
         }
 
         .share-btn {
@@ -203,13 +210,32 @@
         const targetName = urlParams.get('name') || '朋友';
         document.getElementById('main-title').innerHTML = `祝 <span class="highlight-name">${targetName}</span> 新春祈福`;
 
-        const messages = [`🐴 祝 ${targetName} 2026 马到成功！`,`💰 愿 ${targetName} 财运亨通，马上有钱！`,`🚀 祝 ${targetName} 龙马精神，核心力量越来越强！`,`✨ 新的一年，愿 ${targetName} 以梦为马，不负韶华！`,`🎉 祝 ${targetName} 烦恼清零，快乐加倍！`,`🍊 愿 ${targetName} 大吉大利，出门就能捡到钱！`,`🏆 祝 ${targetName} 逢考必过，各项比赛奖项拿到手软！`,`🌸 愿 ${targetName} 桃花朵朵开，感情生活甜甜蜜蜜！`,`🍎 祝 ${targetName} 健健康康，活力满满每一天！`,`🌈 愿 ${targetName} 多喜乐，长安宁！`];
+        const messages = [
+            `🐴 祝 ${targetName} 2026 马到成功，无论做什么都一马当先！`,
+            `💰 愿 ${targetName} 财运亨通，马上有钱，基金股票一路长虹！`,
+            `🚀 祝 ${targetName} 龙马精神，吃嘛嘛香，核心力量越来越强！`,
+            `✨ 新的一年，愿 ${targetName} 以梦为马，不负韶华，在热爱里闪闪发光！`,
+            `🎉 祝 ${targetName} 烦恼清零，快乐加倍，每天都有小确幸！`,
+            `🍊 愿 ${targetName} 大吉大利，锦鲤附体，出门就能捡到钱！`,
+            `🏆 祝 ${targetName} 逢考必过，Paper 顺利发表，各项比赛奖项拿到手软！`,
+            `🌸 愿 ${targetName} 桃花朵朵开，人见人爱，感情生活甜甜蜜蜜！`,
+            `🍎 祝 ${targetName} 平平安安，健健康康，百病不侵，活力满满每一天！`,
+            `🌈 新的一年，愿 ${targetName} 所求皆如愿，所行化坦途，多喜乐，长安宁！`,
+            `🍀 祝 ${targetName} 遇到困难总能逢凶化吉，贵人相助，一路开挂！`,
+            `🌟 愿 ${targetName} 每天都能睡到自然醒，没有 DDL 的烦恼，精神百倍！`,
+            `💼 祝 ${targetName} 升职加薪，Offer 拿到手软，职场一路绿灯！`,
+            `✈️ 愿 ${targetName} 新的一年有更多时间去旅行，看遍山川湖海，自由自在！`,
+            `🍰 祝 ${targetName} 狂吃不胖，奶茶自由，享受世间所有美食！`,
+            `👑 愿 ${targetName} 成为自己的主角，不被定义，活出最精彩的 2026！`,
+            `🎯 愿 ${targetName} 定下的 Flag 全都实现，执行力拉满，一气呵成！`
+        ];
+        
         let currentIndex = 0;
         function shuffleArray(a){for(let i=a.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[a[i],a[j]]=[a[j],a[i]];}}
         shuffleArray(messages);
 
-        // --- BGM & 音效管理 ---
-        const bgm = new Audio('https://api.uomg.com/api/rand.music?sort=热歌榜&format=mp3'); // 演示用，实际建议换成固定连接
+        // --- BGM & 音效管理 (Singleton Context) ---
+        const bgm = new Audio('https://api.uomg.com/api/rand.music?sort=热歌榜&format=mp3'); 
         bgm.loop = true;
         let isMusicPlaying = false;
         let audioCtx = null;
@@ -220,7 +246,7 @@
                 bgm.pause();
                 btn.classList.remove('spinning');
             } else {
-                bgm.play();
+                bgm.play().catch(() => console.log("等待交互触发"));
                 btn.classList.add('spinning');
             }
             isMusicPlaying = !isMusicPlaying;
@@ -259,7 +285,6 @@
         }
 
         function addMessage() {
-            // 用户点击时启动音乐 (符合浏览器安全策略)
             if(!isMusicPlaying) toggleBGM();
             playBlingSound();
             fireNativeConfetti();
@@ -277,7 +302,11 @@
             const n = document.getElementById('friend-name').value.trim();
             if(!n) return alert("输入名字哦！");
             const url = window.location.origin + window.location.pathname + "?name=" + encodeURIComponent(n);
-            navigator.clipboard ? navigator.clipboard.writeText(url).then(()=>alert("✅ 专属链接已复制！")) : prompt("复制链接：", url);
+            if (navigator.clipboard) {
+                navigator.clipboard.writeText(url).then(()=>alert("✅ 专属链接已复制！"));
+            } else {
+                prompt("复制链接：", url);
+            }
         }
     </script>
 </body>
