--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         shuffleArray(messages);
 
         // --- BGM & 音效管理 (Singleton Context) ---
-        const bgm = new Audio('https://api.uomg.com/api/rand.music?sort=热歌榜&format=mp3'); 
+ const bgm = new Audio('gongxi.mp3');
         bgm.loop = true;
         let isMusicPlaying = false;
         let audioCtx = null;
@@ -311,3 +311,4 @@
     </script>
 </body>
 </html>
+
